--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,10 @@
       rel="stylesheet"
     />
 
+    <!-- PWA: Manifest e cor da barra superior (Android) -->
+    <link rel="manifest" href="{{ url_for('static', filename='manifest.json') }}" />
+    <meta name="theme-color" content="#000000" />
+
     <!-- CSS principal (carregado externamente) -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}" />
 
@@ -90,11 +94,6 @@
       <div class="loader"></div>
     </div>
 
-    <!--
-      Div principal que conterá toda a página.
-      Adicionamos flex e min-height para que
-      header, main e footer fiquem como no layout antigo
-    -->
     <div
       id="content"
       style="opacity:0; display: flex; flex-direction: column; min-height: 100vh;"
@@ -210,7 +209,7 @@
           <a href="{{ url_for('listar_usuarios') }}">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
               <path
-                d="M13 7a3 3 0 1 0-6 0 3 3 0 0 0 6 0zm-1.5 0a1.5 1.5 0 1 1-3 0 1.5 1.5 0 0 1 3 0zM6 8c0 1.105-.672 2-1.5 2S3 9.105 3 8s.672-2 1.5-2S6 6.895 6 8zm-1.5 1a2.49 2.49 0 0 0 1-.2 3.006 3.006 0 0 1 2.25 2.9.5.5 0 0 1-1 0 2.001 2.001 0 0 0-4 0 .5.5 0 0 1-1 0 3.006 3.006 0 0 1 2.25-2.9c.306.127.641.2 1 .2zm6.5 3c-.273 0-.535-.03-.789-.086a2.001 2.001 0 0 0-3.422 0A3.105 3.105 0 0 1 8 12a3.106 3.106 0 0 1-1.289-.273.5.5 0 0 1 .578-.816 2.001 2.001 0 0 0 3.422 0 .5.5 0 0 1 .578.816c-.254.057-.516.086-.789.086z"
+                d="M13 7a3 3 0 1 0-6 0 3 3 0 0 0 6 0zM6 8c0 1.105-.672 2-1.5 2S3 9.105 3 8s.672-2 1.5-2S6 6.895 6 8zm-1.5 1a2.49 2.49 0 0 0 1-.2 3.006 3.006 0 0 1 2.25 2.9.5.5 0 0 1-1 0 2.001 2.001 0 0 0-4 0 .5.5 0 0 1-1 0 3.006 3.006 0 0 1 2.25-2.9c.306.127.641.2 1 .2z"
               />
             </svg>
             Gerenciar Usuários
@@ -345,7 +344,7 @@
     </div>
     <!-- Fim do #content -->
 
-    <!-- JS principal (carregado externamente) com defer (não bloqueia parsing do HTML) -->
+    <!-- JS principal (carregado externamente) com defer -->
     <script src="{{ url_for('static', filename='js/script.js') }}" defer></script>
   </body>
 </html>
